<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/etNombreCuenta"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints="username"
        android:hint="@string/nombre_de_la_cuenta"
        android:inputType="text"
        android:maxWidth="300dp" />

    <EditText
        android:id="@+id/etSaldoInicial"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints="amount"
        android:hint="@string/saldo_inicial"
        android:inputType="numberDecimal"
        android:maxWidth="300dp" />

    <Button
        android:id="@+id/btnGuardarCuenta"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/guardar_cuenta" />

    <Button
        android:id="@+id/btnBorrarCuenta"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/borrar_cuenta"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btnVolver"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/volver" />

    <TextView
        android:id="@+id/tvMensaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:text=""
        android:textColor="@android:color/holo_green_dark"
        android:textStyle="bold"/>
</LinearLayout>
