<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- botones para elegir el tipo de trancicción a mostrar -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E5F69B"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnTodos"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selected_btn_background"
            android:clickable="true"
            android:text="@string/todos"
            android:textColor="#000000" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnIngres"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/ingresos"
            android:background="@drawable/selected_btn_background"
            android:clickable="true"
            android:textColor="#000000"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGastos"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/gastos"
            android:background="@drawable/selected_btn_background"
            android:clickable="true"
            android:textColor="#000000" />
    </LinearLayout>

    <ListView
        android:id="@+id/lvTransac"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="#CCCCCC"
        android:dividerHeight="3dp"
        android:padding="16dp" />


</LinearLayout>