<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.TransacFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- botones para elegir el tipo de transacción a mostrar -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/azul_logo"
            android:orientation="horizontal"
            android:paddingTop="40dp"
            android:paddingBottom="10dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnTodos"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/todos"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnIngres"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/ingresos"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnGastos"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/gastos"
                android:textColor="#ffffff"
                android:textSize="20sp" />

        </LinearLayout>

        <ListView
            android:id="@+id/lvTransac"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="#CCCCCC"
            android:dividerHeight="3dp"
            android:padding="16dp" />
    </LinearLayout>



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabNueva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/nuevo"
        android:src="@drawable/add_24"
        app:backgroundTint="@color/seleccionado"
        app:borderWidth="0dp"
        app:elevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.87"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.92"
        app:maxImageSize="48dp"
        app:rippleColor="@android:color/transparent" />
</androidx.constraintlayout.widget.ConstraintLayout>